dataset1235/2025-2/2947369575/users/2743879364/executions/3873599344_3788368433.log
== RUN (2025-08-20 23:25:42)
-- CODE: 



# Leitura de valores de entrada
var = input()

# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
None
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
None
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
None
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
None
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:21:39)
-- CODE: 
input(Gandalf)
input(DonaldKnuth)
input(Python)

# Leitura de valores de entrada
var = Gandalf

# Impressao de saidas
print("Gandalf")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:28:06)
-- CODE: 



# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:16:10)
-- CODE: 
input(Gandalf)

# Leitura de valores de entrada
var = 

# Impressao de saidas
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:22:55)
-- CODE: 
input(Gandalf)

input(DonaldKnuth)
input(Python)

# Leitura de valores de entrada
var = Gandalf

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:22:00)
-- CODE: 
input(Gandalf)

input(DonaldKnuth)
input(Python)

# Leitura de valores de entrada
var = Gandalf

# Impressao de saidas
print("Gandalf")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:26:46)
-- CODE: 



# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:23:03)
-- CODE: 
input(Gandalf)
input(DonaldKnuth)
input(Python)

# Leitura de valores de entrada
var = Gandalf

# Impressao de saidas
print(Gandalf)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:24:06)
-- CODE: 
input(Gandalf)
input(DonaldKnuth)
input(Python)

# Leitura de valores de entrada
var = Gandalf

# Impressao de saidas
print(input(Gandalf))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:24:07)
-- CODE: 
input(Gandalf)
input(DonaldKnuth)
input(Python)

# Leitura de valores de entrada
var = Gandalf

# Impressao de saidas
print(input(Gandalf))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:24:07)
-- CODE: 
input(Gandalf)
input(DonaldKnuth)
input(Python)

# Leitura de valores de entrada
var = Gandalf

# Impressao de saidas
print(input(Gandalf))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Gandalf)
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
